@@ -175,6 +175,7 @@ void VolListNotifyHandler(LPARAM lParam);
 void VolListGetColumnWidths(void);
 void UpdateVolList(void);
 void VolListUpdateStatusField(volume_processing_job *job);
+void VolListUpdateFragmentationField(volume_processing_job *job);
 void VolListRefreshItem(volume_processing_job *job);
 void ReleaseVolList(void);
 void SelectAllDrives(void);
